last fix on image stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ margin-right: 20px;
    
 }
 
-/* =======
+/* ======= */
 
 #nasa-search{
     pointer-events: none;
@@ -169,4 +169,9 @@ margin-right: 20px;
     }
     
 }
-/* main
+/* main  
+*/
+
+.card img {
+    object-fit: cover
+}
